# mbx-networks

./: .gitignore  Caddyfile  README.md  docker-compose.yml  pyproject.toml
loggernet/: Dockerfile  entrypoint.sh  pyproject.toml
loggernet/app/: _get_functions.py  all_functions.py  data.pickle  db.py  functions.py  instruments.py  main.py  operators.py  program.py  schemas.py  test.html
loggernet/app/static/: index.html
loggernet/scripts/: backup_config.sh  check_compile.sh
mesonet_networks/: __init__.py  loggernet.py  record.py  zentra.py
src/mbx_networks/loggernet/: pyproject.toml
src/mbx_networks/loggernet/app/: instruments.py
src/mbx_networks/loggernet/app/static/: index.html
src/mbx_networks/loggernet/scripts/: check_compile.sh
tests/: conftest.py  loggernet.json  test_json_parsing.py  zentra_records.json
