[tool.poetry]
name = "mesonet-networks"
version = "0.1.0"
description = "Mesonet Network Configuration for the Mesonet-in-a-Box Project"
authors = ["colinbrust <colin.brust@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mesonet_networks"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
polars = "^0.20.31"
pydantic = "^2.7.2"
devtools = "^0.12.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
