[project]
name = "loggernet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "debugpy>=1.8.9",
    "fastapi[standard]>=0.115.6",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "sqlalchemy>=2.0.36",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
